# kim-qt

./: .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  IMManager.cpp  IMManager.h
src/: App.qml  AvatarView.qml  CMakeLists.txt  ContactsPage.qml  ContactsViewModel.qml  IMManager.cpp  IMManager.h  LoginWindow.qml  MainWindow.qml  RegisterWindow.qml  SessionPage.qml  SettingWindow.qml  UserViewModel.qml  main.cpp  qml.qrc  qmldir  stdafx.h
src/component/: CircularReveal.h  TextAreaDocument.cpp  TextAreaDocument.h
src/controller/: ContactController.cpp  ContactController.h
src/db/: Message.cpp  Message.h  Session.cpp  Session.h  export.h  precompiled.h
src/event/: MainEvent.cpp  MainEvent.h
src/helper/: CacheNetworkAccessManagerFactory.cpp  CacheNetworkAccessManagerFactory.h  EmoticonHelper.cpp  EmoticonHelper.h  SettingsHelper.h  TextDocumentHelper.cpp  TextDocumentHelper.h
src/manager/: DBManager.cpp  DBManager.h  IMManager.cpp  IMManager.h
src/model/: BaseListModel.h  ContactListModel.cpp  ContactListModel.h  EmoticonListModel.cpp  EmoticonListModel.h  ImageModel.cpp  ImageModel.h  MessageListModel.cpp  MessageListModel.h  MessageListSortProxyModel.cpp  MessageListSortProxyModel.h  MessageModel.cpp  MessageModel.h  SessionListModel.cpp  SessionListModel.h  SessionListSortProxyModel.cpp  SessionListSortProxyModel.h  SessionModel.cpp  SessionModel.h  UserModel.cpp  UserModel.h
src/proto/: Message.pb.cc  Message.pb.h  ReplyBody.pb.cc  ReplyBody.pb.h  SentBody.pb.cc  SentBody.pb.h
src/provider/: UserProvider.cpp  UserProvider.h
src/res/qml/: App.qml
src/res/qml/component/: AvatarView.qml  EmojiPanel.qml
src/res/qml/global/: MainGlobal.qml
src/res/qml/model/: EmojiListModel.qml  qmldir
src/res/qml/page/: ContactsPage.qml  SearchPage.qml  SessionPage.qml
src/res/qml/window/: LoginWindow.qml  MainWindow.qml  RegisterWindow.qml  SettingWindow.qml
